Ajout Fonctionnalités de LLM