@@ -1,18 +1,22 @@
 package com.educ_pltaform.service;
 
 import com.educ_pltaform.entity.UploadedFile;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.ByteArrayResource;
-import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
+import org.springframework.core.io.FileSystemResource;
 import org.springframework.http.*;
+import org.springframework.stereotype.Service;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
+import org.springframework.web.client.RestTemplate;
 
+import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @Service
+@Slf4j
 public class FileExtractionService {
 
     @Value("${python.microservice.url}")
@@ -26,47 +30,72 @@ public class FileExtractionService {
 
     public String sendFileToPythonService(UploadedFile uploadedFile) {
         try {
-            // Préparer les données pour la requête POST
+            // Vérification du chemin du fichier
+            if (uploadedFile.getPath() == null) {
+                throw new IllegalArgumentException("Le chemin du fichier est null");
+            }
+
+            File file = new File(uploadedFile.getPath());
+            if (!file.exists()) {
+                log.error("Fichier non trouvé : {}", uploadedFile.getPath());
+                throw new IllegalArgumentException("Fichier non trouvé : " + uploadedFile.getPath());
+            }
+
+            log.info("Préparation de l'envoi du fichier : {} (taille: {} bytes)", file.getName(), file.length());
+            FileSystemResource fileResource = new FileSystemResource(file);
+
+            // Configuration de la requête
             MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
-            body.add("file", new ByteArrayResource(uploadedFile.getContent()) {
-                @Override
-                public String getFilename() {
-                    return uploadedFile.getName();
-                }
-            });
+            body.add("file", fileResource);
 
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.MULTIPART_FORM_DATA);
+            headers.set("Accept", MediaType.APPLICATION_JSON_VALUE);
 
             HttpEntity<MultiValueMap<String, Object>> requestEntity = new HttpEntity<>(body, headers);
 
-            // Envoyer la requête POST
-            ResponseEntity<String> response = restTemplate.postForEntity(pythonMicroserviceUrl, requestEntity, String.class);
+            log.info("Envoi de la requête vers : {}", pythonMicroserviceUrl);
+            ResponseEntity<String> response = restTemplate.exchange(
+                    pythonMicroserviceUrl,
+                    HttpMethod.POST,
+                    requestEntity,
+                    String.class
+            );
 
-            // Retourner la réponse
+            if (!response.getStatusCode().is2xxSuccessful()) {
+                log.error("Erreur du service Python : {}", response.getStatusCode());
+                throw new RuntimeException("Le service Python a répondu avec le code : " + response.getStatusCode());
+            }
+
+            log.info("Fichier traité avec succès");
             return response.getBody();
+
         } catch (Exception e) {
-            throw new RuntimeException("Erreur lors de l'envoi du fichier au service Python", e);
+            log.error("Erreur lors du traitement du fichier : {}", e.getMessage());
+            throw new RuntimeException("Erreur lors de l'envoi du fichier au service Python: " + e.getMessage());
         }
     }
 
     public void testSendLocalFileToPythonService(String filePath) {
         try {
-            // Lire le fichier local
-            Path path = Path.of(filePath);
-            byte[] content = Files.readAllBytes(path);
-            String fileName = path.getFileName().toString();
+            Path path = Paths.get(filePath);
+            if (!Files.exists(path)) {
+                throw new IllegalArgumentException("Le fichier de test n'existe pas : " + filePath);
+            }
 
-            // Créer un objet UploadedFile
+            log.info("Test d'envoi du fichier : {}", filePath);
+
             UploadedFile file = new UploadedFile();
-            file.setName(fileName);
-            file.setContent(content);
+            file.setName(path.getFileName().toString());
+            file.setPath(path.toAbsolutePath().toString());
+            file.setType(Files.probeContentType(path));
 
-            // Envoyer le fichier au microservice Python
             String response = sendFileToPythonService(file);
-            System.out.println("Réponse du microservice Python : " + response);
+            log.info("Réponse du service Python : {}", response);
+
         } catch (Exception e) {
-            e.printStackTrace();
+            log.error("Erreur lors du test d'envoi : {}", e.getMessage());
+            throw new RuntimeException("Erreur lors du test d'envoi : " + e.getMessage());
         }
     }
 }
